# Turning-Good-Agent

./: .gitignore  README.md  SESSIONS_SPEC.md  pyproject.toml  settings.example.json
.skills/skill-creator/: SKILL.md
.skills/skill-installer/: SKILL.md
Turning-Good-Agent/: __init__.py  cli.py
Turning-Good-Agent/bus/: messages.py  queue.py
Turning-Good-Agent/channels/: __init__.py  base.py  cli.py  output.py
Turning-Good-Agent/config/: settings.py
Turning-Good-Agent/context/: budget.py  builder.py  session_context.py  system_prompt.py  token_budget.py  tool_round_limit_prompt.py
Turning-Good-Agent/hooks/: base.py  channel_status.py  cli.py  events.py  manager.py  tool_permission.py  tool_result_truncation.py  turn_monitor.py
Turning-Good-Agent/llm/: client.py  fake.py  openai_compatible.py  types.py
Turning-Good-Agent/mcp/: __init__.py  adapter.py  client.py  control_tools.py  manager.py  server_worker.py  types.py
Turning-Good-Agent/memory/: event_memory.py  long_term.py  short_term.py
Turning-Good-Agent/observability/: token_monitor.py  trace.py
Turning-Good-Agent/proactive/: base.py  events.py  manager.py
Turning-Good-Agent/runtime/: agent_loop.py  attachment_manager.py  runtime.py  state.py  tool_call_runner.py  turn_context.py
Turning-Good-Agent/sessions/: locks.py  manager.py  store.py  token_counter.py  types.py
Turning-Good-Agent/skills/: __init__.py  (+8 more)
docs/: PROJECT_ARCHITECTURE.md  README.md  TURNING_GOOD_AGENT_SPEC.md
tests/: test_cli.py  test_openai_compatible_llm.py  test_runtime_flow.py  test_sessions.py  test_tools_loop.py
(+34 files in other folders)
