[project]
name = "Turning-Good-Agent"
version = "0.1.0"
description = "A lightweight runtime-first general agent MVP."
requires-python = ">=3.11"
dependencies = ["openai>=1.0.0", "tiktoken>=0.7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
